Initial commit. P.S. sorry, didn't have time for unit tests, need to look after my wife

--- a/MyCare/MyCare.csproj
+++ b/MyCare/MyCare.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyCare.Domin\MyCare.Domin.csproj" />
+    <ProjectReference Include="..\MyCare.Services\MyCare.Services.csproj" />
+  </ItemGroup>
+
 
 </Project>
