--- a/MyCare/Properties/launchSettings.json
+++ b/MyCare/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "timesheet",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
